--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/view_button"
         android:layout_width="233dp"
         android:layout_height="0dp"
         android:layout_marginStart="23dp"
@@ -16,19 +16,19 @@
         android:text="View scheduled events"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/schedule_button" />
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/schedule_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="95dp"
         android:layout_marginBottom="30dp"
         android:text="Schedule event"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/view_button"
+        app:layout_constraintEnd_toEndOf="@+id/view_button"
+        app:layout_constraintStart_toStartOf="@+id/view_button"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
