--- a/app/src/main/res/layout/activity_select_movie.xml
+++ b/app/src/main/res/layout/activity_select_movie.xml
@@ -8,28 +8,27 @@
 
     <TextView
         android:id="@+id/select_movie_label"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="321dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="7dp"
         android:autoSizeTextType="uniform"
         android:text="Choose a movie"
         app:barrierAllowsGoneWidgets="false"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
-        app:layout_constraintStart_toStartOf="@+id/scrollView2"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="343dp"
-        android:layout_height="491dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="54dp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_movie_label" />
+        app:layout_constraintTop_toBottomOf="@+id/select_movie_label">
+
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
